[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pathway_plot"
version = "0.0.1"
authors = [
  { name="conleyp", email="conleyp@ohsu.edu" },
]
description = "A simple plot summarizing pathway enrichment results"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/x/sample/"
"Bug Tracker" = "https://github.com/x/sample/issues"